[gd_scene load_steps=5 format=3 uid="uid://bdntvt5byfq3a"]

[ext_resource type="Script" path="res://T1/money.gd" id="1_3n7yf"]
[ext_resource type="Texture2D" uid="uid://cas8ieuvak7su" path="res://assets/UI/9pack.png" id="1_jgvj7"]
[ext_resource type="Texture2D" uid="uid://ce3ilpirc70x" path="res://assets/T1/Turrets/hud_coins.png" id="2_d6ugh"]
[ext_resource type="Texture2D" uid="uid://0mx6bwm62w5y" path="res://assets/T1/Turrets/hud_0.png" id="3_r1pgk"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_3n7yf")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
offset_right = 345.0
offset_bottom = 100.0
texture = ExtResource("1_jgvj7")
region_rect = Rect2(4, 665, 128, 128)
patch_margin_left = 34
patch_margin_top = 33
patch_margin_right = 33
patch_margin_bottom = 35

[node name="Coin" type="TextureRect" parent="."]
offset_left = 52.0
offset_top = 27.0
offset_right = 99.0
offset_bottom = 74.0
texture = ExtResource("2_d6ugh")

[node name="ten_thousands_digit" type="TextureRect" parent="."]
offset_left = 115.0
offset_top = 27.0
offset_right = 145.0
offset_bottom = 74.0
texture = ExtResource("3_r1pgk")

[node name="thousands_digit" type="TextureRect" parent="."]
offset_left = 150.0
offset_top = 27.0
offset_right = 180.0
offset_bottom = 74.0
texture = ExtResource("3_r1pgk")

[node name="hundreds_digit" type="TextureRect" parent="."]
offset_left = 183.0
offset_top = 27.0
offset_right = 213.0
offset_bottom = 74.0
texture = ExtResource("3_r1pgk")

[node name="tens_digit" type="TextureRect" parent="."]
offset_left = 217.0
offset_top = 27.0
offset_right = 247.0
offset_bottom = 74.0
texture = ExtResource("3_r1pgk")

[node name="ones_digit" type="TextureRect" parent="."]
offset_left = 251.0
offset_top = 27.0
offset_right = 281.0
offset_bottom = 74.0
texture = ExtResource("3_r1pgk")
